# PADD

./: .dockerignore  .env.example  .gitignore  Caddyfile.dev  Dockerfile  README.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  main.py  manage.py  pyproject.toml  pytest.ini  trust-caddy-cert.sh
.github/workflows/: deploy.yml
.kamal/: secrets.example
config/: deploy.yml
microsub_client/: api.py  apps.py  auth.py  context_processors.py  image_utils.py  micropub.py  middleware.py  models.py  outbound.py  tests.py  urls.py  utils.py  views.py
microsub_client/migrations/: 0001_initial.py  0002_broadcast_model.py  0003_knownuser.py  0004_usersettings_dismissedbroadcast.py  0005_usersettings_infinite_scroll.py  0006_add_show_gardn_harvest.py  0007_draft.py  0008_normalize_user_urls.py
microsub_client/static/: manifest.json  sw.js
microsub_client/static/css/: lcars.css
microsub_client/templates/: account_delete.html  admin.html  base.html  broadcast_admin.html  discover.html  landing.html  login.html  new_post.html  offline.html  opml_import.html  settings.html  timeline.html
microsub_client/tests/: conftest.py  test_api.py  test_auth.py  test_context_processors.py  test_image_utils.py  test_micropub.py  test_middleware.py  test_models.py  test_static_assets.py  test_utils.py  test_views.py
reader/: asgi.py  settings.py  test_runner.py  test_settings.py  urls.py  wsgi.py
tests/: test_broadcasts_cache.py  test_cache.py  test_external_api_cache.py  test_migrations.py  test_rate_limit.py  test_sessions.py  test_user_settings_cache.py
(+31 files in other folders)
