[project]
name = "lcars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bleach>=6.3.0",
    "django>=6.0.2",
    "django-htmx>=1.27.0",
    "mf2py>=2.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
]
