[project]
name = "lcars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bleach>=6.3.0",
    "dj-database-url>=2.3",
    "django>=6.0.2",
    "django-htmx>=1.27.0",
    "gunicorn>=23.0",
    "mf2py>=2.0.1",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
]
